# tree-sitter-fknb

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fknb.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fknb/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFknb/: fknb.h
bindings/swift/TreeSitterFknbTests/: TreeSitterFknbTests.swift
corpus/: test.fknb
queries/: folds.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
