[package]
name = "tree-sitter-fknb"
description = "An Advance parcer for FkNB and Jupyter .ipynb files "
version = "0.1.0"
authors = ["Mayank Kumar Jha <mayank.flashcodes@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fknb"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/flashcodes-themayankjha/tree-sitter-fknb.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
